--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-youtube": "^1.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
