--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
+    "moment-duration-format": "^2.3.2",
+    "numeral": "^2.0.6",
     "vue": "^2.6.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
-    "vue-youtube": "^1.4.0"
+    "vue-youtube": "^1.4.0",
+    "vuetify": "^2.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
