--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
+    "hooper": "^0.3.4",
     "moment-duration-format": "^2.3.2",
     "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
+    "vue-slick-carousel": "^1.0.0",
     "vue-youtube": "^1.4.0",
     "vuetify": "^2.2.4"
   },
