--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
+    "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "numeral": "^2.0.6",
     "vue": "^2.6.10",
