--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
+    "vue-nprogress": "^0.1.5",
     "vue-router": "^3.1.5",
     "vue-slick-carousel": "^1.0.0",
     "vue-youtube": "^1.4.0",
