--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "core-js": "^3.6.4",
     "hooper": "^0.3.4",
     "moment-duration-format": "^2.3.2",
+    "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "vue": "^2.6.10",
     "vue-moment": "^4.1.0",
-    "vue-nprogress": "^0.1.5",
     "vue-router": "^3.1.5",
     "vue-slick-carousel": "^1.0.0",
     "vue-youtube": "^1.4.0",
